added stack and list headers and source so we can create func3

--- a/assignment1_data_struct.vcxproj
+++ b/assignment1_data_struct.vcxproj
@@ -139,10 +139,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="itemType.cpp" />
+    <ClCompile Include="List.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="node.cpp" />
+    <ClCompile Include="Stack.cpp" />
     <ClCompile Include="utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="itemType.h" />
+    <ClInclude Include="List.h" />
+    <ClInclude Include="node.h" />
+    <ClInclude Include="stack.h" />
     <ClInclude Include="utilities.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
