--- a/assignment1_data_struct.vcxproj
+++ b/assignment1_data_struct.vcxproj
@@ -141,7 +141,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="node.cpp" />
-    <ClCompile Include="Stack.cpp" />
+    <ClCompile Include="stack.cpp" />
     <ClCompile Include="utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
